# metronome

./: .gitignore  Cargo.toml  build.rs
gui_files/: gui_v1.fl
src/: audio.rs  gui_v1.rs  id.rs  input.rs  keyboard.rs  main.rs  song_listing.rs  ui.rs  util.rs
src/input/: keycode.rs  windows.rs
