[package]
name = "metronome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced="0.3.0"
iced_native = "0.4.0"
iced_futures = "0.3.0"
rust_win32error = "0.8.0"
rand="0.8.4"
once_cell = "1.9.0"
futures-channel = "0.3.19"
#cpal = { version = "~0.13", features = ["asio"] }
cpal = { git = "https://github.com/TobiasNienhaus/cpal", features = ["asio"] }
log = "0.4.14"
fern = "0.6.0"
chrono = "0.4.19"
anyhow = "1.0.52"
thread-priority = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[dependencies.winapi]
version = "0.3.9"
features = [
    "winuser",
    "errhandlingapi",
    "minwindef"
]

[build-dependencies]
fl2rust = "0.4"
